Fix NPE in NamespaceAttributeServiceImpl (Fixes CircleCI 500 error)